# old_Learning_app

./: GitNewAddFoldersAndFile-puschChanger.bat  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/nlohmann/: json.hpp
app/src/main/res/anim/: anim_fly_away_pakito.xml  anim_fly_away_pruntyi.xml  anim_return.xml  kiss_pakito.xml  kiss_pruntyi.xml
app/src/main/res/color/: button_pressed.xml  button_tint.xml
app/src/main/res/drawable/: baseline_check_24.xml  edittextborder.xml  icon_round_question_mark.xml  image_questionedit.xml  oip.xml  outline_process_chart_24.xml  question_mark_12620.xml  round_attach_file_24.xml  scrollbar_thumb.xml  scrollbar_track.xml  scroolbarthumb2.xml  scroolbartrack2.xml  textviewborder.xml
app/src/main/res/layout/: activity_create_question.xml  activity_edit_question.xml  activity_main.xml  dialog_other_settings.xml  settings.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-b+fil/: strings.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fi/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-iw/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+33 files in other folders)
